--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
             "description": "Outfits for Hinata, Ino, Karin, Sakura, TenTen and Tsunade.\n\nKarin's, Tenten's and Tsunade's costumes can be changed via Cheats.",
             "game_version": "0.20",
             "author": "Dinaki",
-            "image": "https://kunoichi-trainer.ru/images/mod_screenshots/christmas_costumes_2022.webp",
+            "image": "https://raw.githubusercontent.com/DinakiS/kt_official_mods_mirror/main/screenshots/christmas_costumes_2022.webp",
             "file_name": "christmas_costumes_2022.zip"
         },
         {
@@ -17,7 +17,7 @@
             "version": "1.0",
             "description": "Adds Halloween event.\nEvent can be started via cheats.\n\nPlay after Halloween 2021 event for better expirience.",
             "game_version": "0.20",
-            "image": "https://kunoichi-trainer.ru/images/mod_screenshots/halloween_2022.webp",
+            "image": "https://raw.githubusercontent.com/DinakiS/kt_official_mods_mirror/main/screenshots/halloween_2022.webp",
             "file_name": "halloween_2022.zip"
         },
         {
@@ -33,7 +33,7 @@
                     "description": "Открывает полностью галерею."
                 }
             },
-            "image": "https://kunoichi-trainer.ru/images/mod_screenshots/gallery_unlocker.webp",
+            "image": "https://raw.githubusercontent.com/DinakiS/kt_official_mods_mirror/main/screenshots/gallery_unlocker.webp",
             "file_name": "gallery_unlocker.zip"
         },
         {
@@ -49,7 +49,7 @@
             "id": "nft_tshirts",
             "name": "NFT T-shirts",
             "version": "1.0",
-            "description": "NFT T-shirts for Ino, Hinata and Sakura.\n{image_url=https://kunoichi-trainer.ru/images/mod_screenshots/nft.webp}",
+            "description": "NFT T-shirts for Ino, Hinata and Sakura.\n{image_url=https://raw.githubusercontent.com/DinakiS/kt_official_mods_mirror/main/screenshots/nft.webp}",
             "game_version": "0.15",
             "author": "Dinaki",
             "file_name": "nft_tshirts.zip"
@@ -83,7 +83,7 @@
             "id": "school_costumes",
             "name": "SchoolGirl Costumes",
             "version": "1.0",
-            "description": "Schoolgirl costumes for Ino Hinata and Sakura.\n{image_url=https://kunoichi-trainer.ru/images/mod_screenshots/schoolgirls.webp}",
+            "description": "Schoolgirl costumes for Ino Hinata and Sakura.\n{image_url=https://raw.githubusercontent.com/DinakiS/kt_official_mods_mirror/main/screenshots/schoolgirls.webp}",
             "author": "Maxie & Balisong",
             "game_version": "0.17.1",
             "file_name": "school_costumes.zip"
@@ -110,7 +110,7 @@
             "id": "ahmad153_pack",
             "name": "3 costumes",
             "version": "1.0",
-            "description": "{image_url=https://kunoichi-trainer.ru/images/mod_screenshots/ahmad153_pack.jpg}",
+            "description": "{image_url=https://raw.githubusercontent.com/DinakiS/kt_official_mods_mirror/main/screenshots/ahmad153_pack.jpg}",
             "game_version": "0.15",
             "author": "Ahmad153",
             "file_name": "ahmad153_pack.zip"
@@ -122,7 +122,7 @@
             "description": "Replaces background in menu with Phut Hon video & song",
             "game_version": "0.15",
             "author": "Dinaki",
-            "image": "https://kunoichi-trainer.ru/images/mod_screenshots/phut_hon.webp",
+            "image": "https://raw.githubusercontent.com/DinakiS/kt_official_mods_mirror/main/screenshots/phut_hon.webp",
             "file_name": "bg_phut_hon.zip"
         },
         {
